--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,1 +1,15 @@
-<p>shop works!</p>
+<div class="container">
+  <section class="products">
+      <h2> Products</h2>
+      <div class="product">
+          <img src="product1.jpg" alt="Product 1">
+          <h3>Product 1</h3>
+          <p>$19.99</p>
+          <button (click)="addtocard()"> Add to Cart</button>
+      </div>
+      <div class="product">
+          <img src="product2.jpg" alt="Product 2">
+          <h3>Product 2</h3>
+          <p>$24.99</p>
+          <button (click)="addtocard()"> Add to Cart</button>
+      </div>
