--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -12,4 +12,5 @@
           <h3>Product 2</h3>
           <p>$24.99</p>
           <button (click)="addtocard()"> Add to Cart</button>
+          <p>done</p>
       </div>
