--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,6 +1,9 @@
-
+<div>
 <ul *ngFor="let item of cartdata">
   <li>{{item.productname}}</li>
-  <li>{{item.amount}}</li>
-  <li><button (click)="onadd(item)">+</button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <button (click)="onminus(item)">-</button></li>
+  <li>${{item.amount}}</li>
+  <li><button (click)="onadd(item)">+</button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; {{item.counter}} <button (click)="onminus(item)">-</button></li>
+  <li><button (click)="total(item)">Total</button></li>
 </ul>
+</div>
+<p>{{totalamount }}</p>
