--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="cart">Cart</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="myorder">My order</a>
+      </li>
     </ul>
   </div>
 </nav>
