show my order profile update logout and authguard are set

--- a/src/app/myoder/myoder.component.html
+++ b/src/app/myoder/myoder.component.html
@@ -1,14 +1,17 @@
-<ul *ngFor="let item of myorder">
-  <li>
-    ${{item.amount}}
-  </li>
-  <li>
-    {{item.productname}}
-  </li>
-  <li>
-    {{item.productdesc}}
-  </li>
-  <li>
-    Quantity={{item.counter}}
-  </li>
-</ul>
+
+<div *ngIf="Buynow">
+  <ul *ngFor="let item of myorder">
+    <li>
+      ${{item.amount}}
+    </li>
+    <li>
+      {{item.productname}}
+    </li>
+    <li>
+      {{item.productdesc}}
+    </li>
+    <li>
+      Quantity={{item.counter}}
+    </li>
+  </ul>
+</div>
