--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
         <a class="nav-link" routerLink="cart">Cart</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="myorder">My order</a>
+        <a class="nav-link" routerLink="profile">profile</a>
       </li>
     </ul>
   </div>
