--- a/src/app/mydeatils/mydeatils.component.html
+++ b/src/app/mydeatils/mydeatils.component.html
@@ -23,8 +23,6 @@
     <label>Email:  </label>
     <input type="text" name="email" value="email" [(ngModel)]="email">
     <br><br>
-    <label>Address:  </label>
-    <input type="text" name="address" value="address"><br>
-    <button type="button" (click)="update(name,email)">Submit</button>
+    <button type="button"    class="btn btn-success"   (click)="update(name,email)">Submit</button>
     <div>
 </div>
