--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -25,10 +25,15 @@
                   <label class="form-label" for="form3Example4cg">Password</label>
                 </div>
 
+                <div class="form-outline mb-4">
+                  <input type="text" id="form3Example4cg" class="form-control form-control-lg" formControlName="Address"  #Address/>
+                  <label class="form-label" for="form3Example4cg">Address</label>
+                </div>
+
 
                 <div class="d-flex justify-content-center">
                   <button type="submit"
-                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" [disabled]="register.invalid"    (click)="Register(name.value,email.value,password.value)">Register</button>
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" [disabled]="register.invalid"    (click)="Register(name.value,email.value,password.value,Address.value)">Register</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Have already an account? <a routerLink="login"
