--- a/src/app/myoder/myoder.component.html
+++ b/src/app/myoder/myoder.component.html
@@ -16,7 +16,7 @@
       Quantity={{item.counter}}
     </li>
     <li>
-      <button (click)="remove(item)">Remove</button>
+      <button class="btn btn-danger" (click)="remove(item)">Remove</button>
     </li>
   </ul>
 
