--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -1,10 +1,10 @@
 
 <section>
 <div class="sidenav">
-  <a routerLink="/dashboard/profile/mydeatils">My Deatils</a>
-  <a routerLink="/dashboard/profile/myorder">my order</a>
-  <a routerLink="/dashboard/profile/wishlist">Wishlist</a>
-  <a (click)="Logout()">Logout</a>
+  <a routerLink="/dashboard/profile/mydeatils"><i class="bi bi-person">&nbsp;&nbsp;Edit Profile</i></a>
+  <a routerLink="/dashboard/profile/myorder"><i class="bi bi-bag">&nbsp;&nbsp;my order</i></a>
+  <a routerLink="/dashboard/profile/wishlist"><i class="bi bi-star-fill">&nbsp;&nbsp;wishlist</i></a>
+  <a (click)="Logout()"><i class="bi bi-box-arrow-left">&nbsp;&nbsp;Logout</i></a>
 </div>
 
 <div class="main">
