Bugs and issus are solve

--- a/src/app/myoder/myoder.component.html
+++ b/src/app/myoder/myoder.component.html
@@ -1,4 +1,10 @@
 
+  <ul>
+    <li>{{userdeatils.name}}</li>
+    <li>{{userdeatils.email}}</li>
+    <li>{{userdeatils.Address}}</li>
+  </ul>
+
  <h1 *ngIf="myorder.length ===     0" style=" color: #007bff;
  font-weight: bold;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);">My order is Empty</h1>
